fix: recap dark mode table color

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -32,7 +32,7 @@ body.dark {
   h3,
   h4,
   h5,
-  h6 {
+  h6, table, .current-status {
     color: $white;
   }
 }
